base/mip-infrastructure/rbac/submariner-rbac.yaml
---
# Namespaces required by Submariner components and RBACs below
apiVersion: v1
kind: Namespace
metadata:
  name: submariner-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: submariner-k8s-broker
